tests/baselines/reference/crashOnMethodSignatures.errors.txt
crashOnMethodSignatures.ts(2,5): error TS1041: Function implementation expected.
